# Module-0-AI-Work-Classification-Engine

./: .cursorrules  .gitignore  30_SPRINT_MASTERPLAN.md  API_DOCUMENTATION.md  AUTOMATED_AGILE_VISION.md  CHANGELOG.md  CHANGELOG_V2.md  CONTRIBUTING.md  CRITICAL_RESPONSE_TO_ASSESSMENT.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_PLAN.md  INTEGRATED_QUALITY_SYSTEM.md  LAUNCH_CHECKLIST.md  LEARNING_FROM_FEEDBACK.md  LICENSE  MASTER_SCENARIO_LIBRARY.md  MCP_BRANCH_SUMMARY.md  MCP_FRAMEWORK_DEMO.py  MCP_TRANSFORMATION_SUMMARY.md  MVP_CORRECTIONS_SUMMARY.md  PULL_REQUEST_SUMMARY.md  QUICK_START_MCP.md  README.md  REPOSITORY_ANALYSIS_GUIDE.md  REQUIREMENTS_ASSESSMENT.md  ROADMAP.md  SCENARIO_VALIDATION_TESTS.md  SELF_IMPROVEMENT_PLAN.md  SETUP_AI_CODE_REVIEW.md  SOLUTION_OVERVIEW.md  TECHNICAL_DEBT_COMPLETION.md  TRANSFORMATION_ROADMAP.md  VALIDATION_REPORT.md  __init__.py  complete_scaffolding_templates.py  developer_workflow_demo.md  docker-compose.yml  env.example  improved-ai-coding-standards.md  module_scaffolding_system.py  (+10 more)
.cursor/rules/: requirements.mdc
.github/: ai-review-config.json
.github/templates/: ai-review-config.json  microservice-json-schema.json
.github/workflows/: ai-code-review.yml  automated-agile-pipeline.yml  ci.yml
ai-work-classification-engine/: AI_COMPLETION.md  Dockerfile  __init__.py  api_server.py  classification_types.py  core.py  docker-compose.yml  interface.py  multi_prompt_engine.py  repository_analyzer.py  requirements.txt  types.py
ai-work-classification-engine/config/: README.md  prompts.json  standards.json
ai-work-classification-engine/data/: analytics.json  feedback.json  patterns.json
ai-work-classification-engine/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
ai-work-classification-engine/scripts/: build.sh  deploy.sh  test.sh
ai-work-classification-engine/tests/: test_classification.py  test_contracts.py  test_core.py
cache-manager/: AI_COMPLETION.md  __init__.py  cache-manager_server.py  core.py  interface.py  mcp_config.json  pytest.ini  types.py
cache-manager/docs/: API.md  INTEGRATION.md  README.md
cache-manager/tests/: test_ai_integration.py  test_mcp_core.py  test_mcp_protocol.py
claude-api-gateway/: core.py  mcp_config.json  requirements.txt
claude-api-gateway/docs/: README.md
docs/: DEFINITION_OF_READY.md  SPRINT2_BACKLOG.md  TECHNICAL_DEBT_ANALYSIS.md
example-containerized-module/: Dockerfile  docker-compose.yml
examples/: README.md
framework-specs/: metrics-collector.json  pattern-generator.json  sprint-manager.json
notification-hub/: AI_COMPLETION.md  __init__.py  core.py  interface.py  mcp_config.json  notification-hub_server.py  types.py
payment-gateway/: AI_COMPLETION.md  __init__.py  core.py  interface.py  mcp_config.json  payment-gateway_server.py  types.py
scripts/: auto_update_system.py  check_template_improvements.py
src/: __init__.py
test-payment-processor/: AI_COMPLETION.md  __init__.py  core.py  interface.py  mcp_config.json  test-payment-processor_server.py  types.py
tests/: test_cli.py  test_comprehensive.py  test_real_world_scenarios.py
user-auth/: AI_COMPLETION.md  __init__.py  core.py  interface.py  mcp_config.json  types.py  user-auth_server.py
web/: index.html
(+133 files in other folders)
